k8s/traefik/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-ingressroute
  namespace: fastnews
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`fastnews.local`)
      kind: Rule
      services:
        - name: frontend
          port: 80

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backend-ingressroute
  namespace: fastnews
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`api.fastnews.local`)
      kind: Rule
      services:
        - name: backend
          port: 3000
